<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FragmentJogo">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/placar">

    </TextView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear1"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/jogador1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="8"
            android:background="@color/teal_700"
            android:text="@string/jog_1"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck">

        </TextView>

        <TextView
            android:id="@+id/placarx"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="2"
            android:background="@color/teal_700"
            android:text="@string/placar_x"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck">

        </TextView>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:layout_marginTop="4dp"
        android:background="@color/black"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/linear1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:focusable="false"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/jogador2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="49dp"
            android:layout_weight="8"
            android:background="@color/teal_700"
            android:text="@string/jog_2"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck">

        </TextView>

        <TextView
            android:id="@+id/placaro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="49dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="2"
            android:background="@color/teal_700"
            android:text="@string/placar_O"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck">

        </TextView>

    </LinearLayout>

    <TableLayout
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bt00"
                style="@style/botao"
                tools:ignore="SpeakableTextPresentCheck">

            </Button>

            <Button
                android:id="@+id/bt01"
                style="@style/botao"
                tools:ignore="SpeakableTextPresentCheck">

            </Button>

            <Button
                android:id="@+id/bt02"
                style="@style/botao"
                tools:ignore="SpeakableTextPresentCheck">

            </Button>

        </TableRow>

        <TableRow
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bt10"
                style="@style/botao"
                tools:ignore="SpeakableTextPresentCheck">

            </Button>

            <Button
                android:id="@+id/bt11"
                style="@style/botao"
                tools:ignore="SpeakableTextPresentCheck">

            </Button>

            <Button
                android:id="@+id/bt12"
                style="@style/botao"
                tools:ignore="SpeakableTextPresentCheck">

            </Button>

        </TableRow>

        <TableRow
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bt20"
                style="@style/botao"
                tools:ignore="SpeakableTextPresentCheck">

            </Button>

            <Button
                android:id="@+id/bt21"
                style="@style/botao"
                tools:ignore="SpeakableTextPresentCheck">

            </Button>

            <Button
                android:id="@+id/bt22"
                style="@style/botao"
                tools:ignore="SpeakableTextPresentCheck">

            </Button>

        </TableRow>

    </TableLayout>





</androidx.constraintlayout.widget.ConstraintLayout>